--- a/docker-compose-and-Dockerfile/go-service-k8s.yml
+++ b/docker-compose-and-Dockerfile/go-service-k8s.yml
@@ -22,6 +22,14 @@ spec:
         name: go-service
         resources: {}
         env:
+        - name: MY_APP_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.labels['app']
+        - name: MY_APP_VERSION
+          value: '1.1'
+        - name: MY_APP_GROUP
+          value: 'my_group'
         - name: MY_NODE_NAME
           valueFrom:
             fieldRef:
@@ -34,6 +42,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: MY_HOST_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.hostIP
         - name: MY_POD_IP
           valueFrom:
             fieldRef:
